# flashtext

./: .coveragerc  .gitignore  AUTHORS.rst  README.rst  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  wercker.yml
.github/workflows/: build_dev_package.yml  build_package.yml
docs/: Makefile  api.rst  conf.py  index.rst
flashtext/: keyword.py
src/chatbot/flashtext/: keyword.py
src/flashtext/: keyword.py
test/: test_dictionary_loading.py  test_file_load.py  test_loading_keyword_list.py
tests/: conftest.py  test_dictionary_loading.py  test_extractor.py  test_file_load.py  test_kp_exceptions.py  test_kp_extract_span.py  test_kp_get_all_keywords.py  test_kp_len.py  test_kp_term_in_kp.py  test_loading_keyword_list.py  test_remove_keywords.py  test_replacer.py
